@@ -2,6 +2,7 @@
 HEAD
 ====
 - xt_TARPIT: fix kernel warning about RTAX_HOPLIMIT being used
+- xt_TEE: abort build when the feature is already provided by mainline
 
 
 v1.37 (2011-06-25)
